fix spacing

--- a/src/scss/_home.scss
+++ b/src/scss/_home.scss
@@ -105,6 +105,7 @@
       text-decoration: none;
       color: $black;
       margin-bottom: 1rem;
+      display: block;
 
       &:focus {
         outline: none;
